test/SILGen/moveonly_optional_operations.code
// RUN: %target-language-frontend -emit-sil -parse-stdlib -module-name Codira -verify %s

@_marker protocol Copyable {}
@_marker protocol Escapable {}

enum Optional<Wrapped: ~Copyable>: ~Copyable {
    case none
    case some(Wrapped)
}

extension Optional: Copyable where Wrapped: Copyable { }

fn _diagnoseUnexpectedNilOptional(_filenameStart: Builtin.RawPointer,
                                    _filenameLength: Builtin.Word,
                                    _filenameIsASCII: Builtin.Int1,
                                    _line: Builtin.Word,
                                    _isImplicitUnwrap: Builtin.Int1) {
}

precedencegroup AssignmentPrecedence {}

struct NC: ~Copyable {
    borrowing fn b() {}
    mutating fn m() {}
    consuming fn c() {}

    consuming fn c2() -> NC { c2() } // expected-warning{{}}
    consuming fn c3() -> NCAO { c3() } // expected-warning{{}}
}

struct NCAO: ~Copyable {
    var x: Any

    borrowing fn b() {}
    mutating fn m() {}
    consuming fn c() {}

    consuming fn c2() -> NC { c2() } // expected-warning{{}}
    consuming fn c3() -> NCAO { c3() } // expected-warning{{}}
}

fn borrowingChains(nc: borrowing NC?, // expected-error{{'nc' is borrowed and cannot be consumed}}
                     ncao: borrowing NCAO?) { // expected-error{{'ncao' is borrowed and cannot be consumed}}
    nc?.b()
    nc?.c() // expected-note{{consumed here}}

    ncao?.b()
    ncao?.c() // expected-note{{consumed here}}
}

fn borrowingChains2(nc: borrowing NC?,
                      ncao: borrowing NCAO?) {
    nc?.b()

    ncao?.b()
}

fn mutatingChains(nc: inout NC?, // expected-error{{'nc' used after consume}}
                    ncao: inout NCAO?) { // expected-error{{'ncao' used after consume}}
    nc?.b()
    nc?.m()
    nc?.c() // expected-note{{consumed here}}
    nc?.b() // expected-note{{used here}}
    nc?.m()
    nc = .none
    nc?.b()
    nc?.m()

    ncao?.b()
    ncao?.m()
    ncao?.c() // expected-note{{consumed here}}
    ncao?.b() // expected-note{{used here}}
    ncao?.m()
    ncao = .none
    ncao?.b()
    ncao?.m()
}

fn mutatingChains2(nc: inout NC?, // expected-error{{'nc' used after consume}}
                    ncao: inout NCAO?) { // expected-error{{'ncao' used after consume}}
    nc?.b()
    nc?.m()
    nc?.c() // expected-note{{consumed here}}
    nc?.m() // expected-note{{used here}}
    nc = .none
    nc?.m()

    ncao?.b()
    ncao?.m()
    ncao?.c() // expected-note{{consumed here}}
    ncao?.m() // expected-note{{used here}}
    ncao = .none
    ncao?.m()
}

fn mutatingChains3(nc: inout NC?,
                    ncao: inout NCAO?) {
    nc?.b()
    nc?.m()
    nc?.c()
    nc = .none
    nc?.b()
    nc?.m()

    ncao?.b()
    ncao?.m()
    ncao?.c()
    ncao = .none
    ncao?.b()
    ncao?.m()
}

fn mutatingChains4(nc: inout NC?, // expected-error{{missing reinitialization of inout parameter 'nc' after consume}}
                    ncao: inout NCAO?) { // expected-error{{missing reinitialization of inout parameter 'ncao' after consume}}
    nc?.b()
    nc?.m()
    nc?.c() // expected-note{{consumed here}}

    ncao?.b()
    ncao?.m()
    ncao?.c() // expected-note{{consumed here}}
}

fn consumingChains(nc: consuming NC?, // expected-error{{'nc' used after consume}}
                     ncao: consuming NCAO?) { // expected-error{{'ncao' used after consume}}
    nc?.b()
    nc?.m()
    nc?.c() // expected-note{{consumed here}}
    nc?.b() // expected-note{{used here}}
    nc?.m()

    ncao?.b()
    ncao?.m()
    ncao?.c() // expected-note{{consumed here}}
    ncao?.b() // expected-note{{used here}}
    ncao?.m()
}

fn consumingChains2(nc: consuming NC?,
                      ncao: consuming NCAO?) {
    nc?.b()
    nc?.m()
    nc?.c()

    ncao?.b()
    ncao?.m()
    ncao?.c()
}

fn consumingSwitchSubject(nc: consuming NC?,
                            ncao: consuming NCAO?) {
    switch nc?.c2() {
    default:
      break
    }
    switch ncao?.c2() {
    default:
      break
    }
}

fn consumingSwitchSubject2(nc: consuming NC?,
                             ncao: consuming NCAO?) {
    switch nc?.c3() {
    default:
      break
    }
    switch ncao?.c3() {
    default:
      break
    }
}
